# cricket-analytics

./: LICENSE  README.md  pyproject.toml
IPLAnalysis-Team/: app.py  matches.csv  teammodules.py  teamutils.py
SriLanka/LPL/: LPLAnalysis.ipynb  LPLmatches.csv  Readme.md
src/ipl/: app.py  modules.py  runserver.py  teammodules.py  teamutils.py  utils.py
src/ipl_stats/: 2008_2021_data_matches.csv  app.py  modules.py  runserver.py  teammodules.py  teamutils.py  utils.py  winner.csv
tests/: test_ipl.py  test_ipl_stats.py
