[tool.poetry]
name = "ipl"
version = "0.1.0"
description = ""
authors = ["naveengct <naveenrajesh2222@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
streamlit = "^1.5.1"
altair = "^4.2.0"
pandas = "^1.4.1"
"backports.zoneinfo" = "^0.2.1"
importlib-resources = "^5.4.0"
cufflinks = "^0.17.3"
plotly = "^5.6.0"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"

[tool.poetry.scripts]
start = "src.ipl.runserver:main"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
